# projecto-final-openai-team

./: CMakeLists.txt  Downsampling.py  INSTRUCCIONES_CLION.md  INSTRUCCIONES_ENTRENAMIENTO.md  README.md  data_loader.h  diabetes_network.h  fast_training  main.cpp  model_evaluation.h  neural_network.h  nn_dense.h  nn_interfaces.h  nn_loss.h  programa  stable_train  train_1000_epochs.cpp  train_500_epochs.cpp  train_stable.cpp
diabetes_ai/: CMakeLists.txt
diabetes_ai/data/: diabetes_prediction_dataset_balanced_8500.csv
diabetes_ai/docs/: INSTRUCCIONES_ENTRENAMIENTO.md  README.md
diabetes_ai/include/utec/algebra/: tensor.h
diabetes_ai/include/utec/diabetes/: data_loader.h  diabetes_network.h  model_evaluation.h
diabetes_ai/include/utec/nn/: nn_activation.h  nn_interfaces.h  nn_optimizer.h
diabetes_ai/scripts/: datos.py
diabetes_ai/src/: main.cpp  train_stable.cpp
